--- a/templates/index.html
+++ b/templates/index.html
@@ -31,12 +31,12 @@
 			// attribute vec2 uv;
 
 			// declare uniform variables specified in the shader program (i.e. uniform locations)
-			uniform sampler2D t_normal;
+			//uniform sampler2D t_normal;
 
 			varying vec2 vUV;
-			varying vec3 fN;
-			varying vec3 fE;
-			varying vec3 fL;
+			//varying vec3 fN;
+			//varying vec3 fE;
+			//varying vec3 fL;
 
 			void main()
 			{
@@ -44,11 +44,11 @@
 				vUV = uv;
 
 				// Sample normal texture for hill shading.
-				fN = normalize(texture2D(t_normal, uv).xyz * 256.);
-                fE = -(modelViewMatrix * vec4(position, 1.0)).xyz;
+				//fN = normalize(texture2D(t_normal, uv).xyz * 256.);
+                //fE = -(modelViewMatrix * vec4(position, 1.0)).xyz;
 
 				// Set the light position. Make it a unit vector since direction is what matters.
-				fL = normalize(vec3(1.0,-1.0,1.0));
+				//fL = normalize(vec3(1.0,-1.0,1.0));
 
 				// Set the final position of this vertex in MVP coordinates
 			    gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
@@ -69,42 +69,43 @@
 
 			uniform sampler2D t_data;
 			varying vec2 vUV;
-			varying vec3 fN;
-			varying vec3 fE;
-			varying vec3 fL;
+			//varying vec3 fN;
+			//varying vec3 fE;
+			//varying vec3 fL;
 			//varying float isocean;
 
 			void main()
 			{
 				// constant ambient, diffuse and specular and shiny values
-				float KA = 0.2;
-				float KD = 1.0;
-				float KS = 0.15;
-				float SHINY = 20.0;
+				//float KA = 0.2;
+				//float KD = 1.0;
+				//float KS = 0.15;
+				//float SHINY = 20.0;
 
 				// sample the layer data
 				vec4 texColor = texture2D(t_data, vUV);
 
 				// compute lighting per vertex
-				vec3 N = normalize(fN);
-			    vec3 E = normalize(fE);
-			    vec3 L = normalize(fL);
-			    vec3 H = normalize( L + E );
-			    vec4 ambient = vec4(vec3(KA),1.0)*texColor;
-			    float diffDot = max(dot(L, N), 0.0);
-			    vec4 diffuse = diffDot*vec4(vec3(KD),1.0)*texColor;
-			    float specDot = pow(max(dot(N, H), 0.0), SHINY);
-			    vec4 specular = specDot*vec4(vec3(KS),1.0)*texColor;
+				//vec3 N = normalize(fN);
+			    //vec3 E = normalize(fE);
+			    //vec3 L = normalize(fL);
+			    //vec3 H = normalize( L + E );
+			    //vec4 ambient = vec4(vec3(KA),1.0)*texColor;
+			    //float diffDot = max(dot(L, N), 0.0);
+			    //vec4 diffuse = diffDot*vec4(vec3(KD),1.0)*texColor;
+			    //float specDot = pow(max(dot(N, H), 0.0), SHINY);
+			    //vec4 specular = specDot*vec4(vec3(KS),1.0)*texColor;
 
 			    // zero the specular highlight if the light is behind the vertex being drawn
-			    if( dot(L, N) < 0.0 ) {
-				   specular = vec4(0.0, 0.0, 0.0, 1.0);
-			    }
+			    //if( dot(L, N) < 0.0 ) {
+				//   specular = vec4(0.0, 0.0, 0.0, 1.0);
+			    //}
 
 			    // final pixel color summation from lighting components
-			    vec4 finalColor = ambient + diffuse + specular;
-			    finalColor.a = 1.0;
-				gl_FragColor = finalColor;
+			    //vec4 finalColor = ambient + diffuse + specular;
+			    //finalColor.a = 1.0;
+				//gl_FragColor = finalColor;
+				gl_FragColor = texColor;
 
 			}
 		</script>
