--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,12 @@
 			}
 		</style>
 
-<!-- CSS -->
-<link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.9.0/css/alertify.min.css"/>
-<link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.9.0/css/themes/default.min.css"/>
+		<!-- Alertify css -->
+		<link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.9.0/css/alertify.min.css"/>
+		<link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.9.0/css/themes/default.min.css"/>
 
 	</head>
 	<body>
-	<!-- JavaScript -->
-	<script src="//cdn.jsdelivr.net/alertifyjs/1.9.0/alertify.min.js"></script>
 
 	<div id='loading_div'><h2>Loading scene, please wait...</h2></div>
 		<script type="x-shader/x-vertex" id="vertexShader">
@@ -39,9 +37,17 @@
 				gl_FragColor = texColor;
 			}
 		</script>
+
+		<!-- Misc assets -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="//cdn.jsdelivr.net/alertifyjs/1.9.0/alertify.min.js"></script>
+
+        <!-- Three.js assets -->
 		<script src="js/three.js"></script>
 		<script src="js/OrbitControls.js"></script>
+
+		<!-- Main app assets  -->
+		<script src="js/utils.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
