Using distances from center tower (column 21, idx 20).

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,6 @@
 
 	<!-- Main app assets  -->
 	<script src="js/utils.js"></script>
-	<script src="js/app.js"></script>
+	<script src="js/main.js"></script>
 	</body>
 </html>
