--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,19 @@
 			}
 			#player {
 				position: absolute;
-				width: 1000px;
+				width: 800px;
 				left: 100px;
 				top: 90vh;
 				z-index: 10;
 			}
 			#time_slider {
 				width: 800px;
+			}
+			#playback_options {
+				margin: 10px;
+				padding: 10px;
+				background-color: grey;
+				width: 500px;
 			}
 			#legend {
 				position: absolute;
@@ -31,11 +37,12 @@
 			}
 			#time {
 				position: absolute;
-				top: 10vh;
+				top: 5vh;
 				left: 100px;
-				width: 250px;
+				width: 350px;
 				z-index: 10;
 				color: white;
+				font-size: x-large;
 			}
 		</style>
 
@@ -51,12 +58,14 @@
 		<div id='time'></div>
 		<div id='player'>
 			<div id='time_slider'></div>
-			<button id='forward' type='button'>Forward</button>
-			<button id='backward' type='button'>Backward</button>
-			<button id='reset' type='button'>Reset</button>
-			<button id='animate' type='button'>Start Playback</button>
-			<label style='color: white;'>Playback Speed</label>
-			<input type="number" id="speed" value="1" min="0" max="10">
+			<div id='playback_options'>
+				<button id='forward' type='button'>Forward</button>
+				<button id='backward' type='button'>Backward</button>
+				<button id='reset' type='button'>Reset</button>
+				<button id='animate' type='button'>Start Playback</button>
+				<label style='color: white;'>Playback Speed</label>
+				<input type="number" id="speed" value="10" min="0" max="100">
+			</div>
 		</div>
 		<!--div id='legend'>
 			Here I am!
@@ -64,7 +73,9 @@
 
 		<!-- Misc assets -->
 	   	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="//cdn.jsdelivr.net/alertifyjs/1.9.0/alertify.min.js"></script>
+		<!--script src="//cdn.jsdelivr.net/alertifyjs/1.9.0/alertify.min.js"></script-->
+		<script src="https://cdn.rawgit.com/alertifyjs/alertify.js/v1.0.10/dist/js/alertify.js"></script>
+
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
