--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 				margin: 10px;
 				padding: 10px;
 				background-color: grey;
-				width: 500px;
+				width: 610px;
 			}
 			#legend {
 				position: absolute;
@@ -63,17 +63,15 @@
 				<button id='backward' type='button'>Backward</button>
 				<button id='reset' type='button'>Reset</button>
 				<button id='animate' type='button'>Start Playback</button>
-				<label style='color: white;'>Playback Speed</label>
+				<label>Playback Speed</label>
 				<input type="number" id="speed" value="10" min="0" max="100">
+				<label>Reverse Vectors</label>
+				<input type="checkbox" id="tofrom">
 			</div>
 		</div>
-		<!--div id='legend'>
-			Here I am!
-		</div-->
 
 		<!-- Misc assets -->
 	   	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<!--script src="//cdn.jsdelivr.net/alertifyjs/1.9.0/alertify.min.js"></script-->
 		<script src="https://cdn.rawgit.com/alertifyjs/alertify.js/v1.0.10/dist/js/alertify.js"></script>
 
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
