Reverted back to MapControls.

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
 
 	 	<!-- Three.js assets -->
 		<script src="js/three.js"></script>
-		<script src="js/OrbitControls.js"></script>
+		<script src="js/MapControls.js"></script>
 
 		<!-- Main app assets  -->
 		<script src="js/utils.js"></script>
