--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 				position: absolute;
 				width: 800px;
 				left: 100px;
-				top: 90vh;
+				bottom: 30px;
 				z-index: 10;
 			}
 			#time_slider {
@@ -27,13 +27,6 @@
 				padding: 10px;
 				background-color: grey;
 				width: 730px;
-			}
-			#legend {
-				position: absolute;
-				right: 100px;
-				top: 90vh;
-				width: 200px;
-				background-color: grey;
 			}
 			#time {
 				position: absolute;
@@ -47,6 +40,24 @@
 			.number_input {
 				width: 40px;
 			}
+			#legend {
+				position: absolute;
+				left: 100px;
+				top: 10vh;
+				width: 200px;
+				padding: 5px;
+				background-color: grey;
+			}
+			.legend div {
+			    width:16px;
+			    border:1px solid #808080;
+			    display:inline-block;
+			}
+			.legend_text {
+				margin-right: 42px;
+			}
+			.red { background-color:red; }
+			.blue { background-color:blue; }
 		</style>
 
 		<!-- jQuery UI -->
@@ -72,6 +83,16 @@
 				<input type="checkbox" id="tofrom">
 				<label>Show Contours</label>
 				<input type="checkbox" id="contours">
+			</div>
+		</div>
+		<div id="legend">
+				<label>Relative Temperature Scale</label>
+				<input type="checkbox" id="temperature">
+			<div class="legend">
+  				<div class="blue">&nbsp;</div>
+  				<div class="legend_text" id="blue_value">Blue</div>
+    			<div class="red">&nbsp;</div>
+  				<div class="legend_text" id="red_value">Red</div>
 			</div>
 		</div>
 
